# ufp

./: .gitignore  Dockerfile  Makefile  pip.conf  pyproject.toml  runtests.py  setup.cfg  setup.py
requirements/: dev.txt
src/ufp/: __init__.py  cli.py
src/ufp/formatter/: __init__.py  base.py  basic.py  count.py  summary.py
src/ufp/parser/: __init__.py
tests/: __init__.py  cli.py
tests/parser/: __init__.py  test_base_parser.py
ufp/: __init__.py  cli.py
ufp/formatter/: __init__.py  base.py  basic.py  count.py  summary.py
ufp/parser/: __init__.py  base.py  file.py
