[wheel]
universal = 1
python-tag = py37

[bdist_wheel]
universal = 1
python-tag = py37

[nosetests]
verbosity=2
cover-package=ufp

[tool:pytest]
addopts = -l -ra --verbose

[metadata]
name = ufp
license_file = LICENSE

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[options]
packages =
    ufp
    ufp.formatter
    ufp.parser
    ufp.cli
py_modules =
    ufp
